# jam0001

ajo/: .gitignore  gentest.py  pyproject.toml
ajo/ajo/: main.py
ajo/test/: basic.ajo  basic.zig
