[tool.poetry]
name = "ajo"
version = "0.1.0"
description = ""
authors = ["Tom <tom@contextfree.info>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
setuptools = "^57.4.0"

[tool.poetry.scripts]
ajo = "ajo.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
